--- a/src/Header.css
+++ b/src/Header.css
@@ -6,10 +6,12 @@
     position: sticky;
     top: 0;
     z-index: 100;
+    justify-content: center;
 }
 .nav_left{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 50%;
 }
 .header_logo{
@@ -52,6 +54,7 @@
     flex: 1;
     align-items: center;
     border-radius: 24px;
+    padding: 10px 0px 10px 0px;
 }
 .header_searchInput{
     height: 12px;
@@ -127,6 +130,7 @@
         top: 0;
         z-index: 100;
         height: auto;
+        justify-content: center;
     }
     .nav_left{
         display: flex;
