--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,12 +8,23 @@
 .home_row{
     display: flex;
     z-index: 1;
+    flex-wrap: wrap;
     margin-left: 5px;
     margin-right: 5px;
+    justify-content: center;
 }
 .home_image{
     width: 100%;
     z-index: -1;
-    margin-bottom: -150px;
+    margin-bottom: -250px;
     mask-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+}
+.product_card{
+    background-color: aliceblue;
+    z-index: 1;
+}
+.buttonsPanel{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
