--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,13 +1,13 @@
-/* .product{
+.product{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
     margin: 10px;
-    padding: 20px;
-    width: 100%;
+    padding: 0px;
+    border-radius: 5px;
     max-height: 400px;
-    min-width: 100px;
+    /* min-width: 100px; */
     background-color: white;
     z-index: 1;
 }
@@ -35,4 +35,4 @@
     border-color: #a88734 #9c7e31 #846a29;
     color: rgb(255, 255, 255);
     border-radius: 7px;
-} */
+}
