--- a/src/components/AdminLogin.css
+++ b/src/components/AdminLogin.css
@@ -1,13 +1,15 @@
-.adminregister {
+.adminlogin {
     /* background-color: white; */
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 3%;
+    background-color: rgb(235, 239, 243);
+    /* padding-bottom: 30%; */
 }
 
-.signup_logo {
+.adminlogin_logo {
     margin-top: 20px;
     margin-bottom: 20px;
     object-fit: contain;
@@ -16,44 +18,47 @@
     margin-left: auto;
 }
 
-.adminRegisterForm {
+.adminlogin_container {
     width: 35%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     border: 1px solid lightgray;
-    padding-left: 20px;
+    /* padding: 20px; */
     background-color: white;
     margin-bottom: 30px;
     margin-top: 5%;
 }
 
-.ar_form_and_button{
-    margin: 5%
-}
-
 .inputField{
-    margin: 10px;
+    margin: 8px;
 }
 
-.adminRegisterForm>h1 {
+.adminlogin_container>h1 {
     font-weight: 500;
     margin-bottom: 20px;
 }
 
-.adminRegisterForm>form>h5 {
+.adminlogin_container>form>h5 {
     margin-bottom: 5px;
 }
 
-.signuadminRegisterFormp_container>form>input {
+/* .userlogin_container>form {
+    margin: 5%;
+} */
+.al_form_and_button{
+    margin: 5%;
+}
+
+.adminlogin_container>form>input {
     height: 30px;
     margin-bottom: 10px;
     background-color: white;
     width: 98%;
 }
 
-.adminRegisterForm>p {
+.adminlogin_container>p {
     margin-top: 15px;
     font-size: 12px;
 }
@@ -65,7 +70,7 @@ imageUpload_Button:howver{
     background-color: #616161;
 }
 
-.signup_signInButton {
+.adminlogin_signInButton {
     background: #f0c14b;
     border-radius: 2px;
     width: 100%;
@@ -75,7 +80,7 @@ imageUpload_Button:howver{
     border-color: #a88734 #9c7e31 #846a29;
 }
 
-.signup_registerButton {
+.adminlogin_registerButton {
     border-radius: 2px;
     width: 100%;
     height: 30px;
@@ -85,10 +90,8 @@ imageUpload_Button:howver{
 }
 
 
-
-
 @media screen and (max-width: 1246px) {
-    .adminRegisterForm {
+    .adminlogin_container {
         width: 50%;
         height: fit-content;
         display: flex;
@@ -102,7 +105,7 @@ imageUpload_Button:howver{
 }
 
 @media screen and (max-width: 800px) {
-    .adminRegisterForm {
+    .adminlogin_container {
         width: 60%;
         height: fit-content;
         display: flex;
@@ -115,7 +118,7 @@ imageUpload_Button:howver{
     }
 }
 @media screen and (max-width: 570px) {
-    .adminRegisterForm {
+    .adminlogin_container {
         width: 70%;
         height: fit-content;
         display: flex;
@@ -128,7 +131,7 @@ imageUpload_Button:howver{
     }
 }
 @media screen and (max-width: 570px) {
-    .adminRegisterForm {
+    .adminlogin_container {
         width: 80%;
         height: fit-content;
         display: flex;
