--- a/src/components/InvalidUsers.css
+++ b/src/components/InvalidUsers.css
@@ -1,11 +1,8 @@
 .main{
     display: flex;
-}
-
-.leftPanel{
-    width: 20%;
-    background-color: white;
-}
-.rightPanel{
-    width: 80%;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    align-items: center;
+    padding: 10px;
 }
