Frontend redy for testing

--- a/src/components/InvalidUserCard.css
+++ b/src/components/InvalidUserCard.css
@@ -1,5 +1,11 @@
 .unverified{
-    color: red;
+    color: white;
+    background-color: red;
+    margin: 0;
+    /* justify-content: flex-start; */
+}
+.verified{
+    color: blue;
     margin: 0;
     /* justify-content: flex-start; */
 }
