--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     margin: 10px;
     padding: 0px;
     border-radius: 5px;
